...
                                <rect key="frame" x="0.0" y="713" width="414" height="61"/>
                                <color key="backgroundColor" systemColor="systemTealColor"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="61" id="SnA-Gb-m65"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="30"/>
                                <state key="normal" title="Log In">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <segue destination="5v2-hE-4Ub" kind="show" id="6cf-sH-59X"/>
                                </connections>
                            </button>
...
                                <rect key="frame" x="0.0" y="657" width="414" height="61"/>
                                <color key="backgroundColor" name="BrandLightBlue"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="61" id="qxQ-xP-pdb"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="30"/>
                                <state key="normal" title="Register">
                                    <color key="titleColor" name="BrandBlue"/>
                                    <color key="titleShadowColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <connections>
                                    <segue destination="BYZ-38-t0r" kind="show" id="4vn-RF-Xlu"/>
                                </connections>
...
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Scg-da-zi8" userLabel="EmailView">
                                <rect key="frame" x="0.0" y="0.0" width="414" height="177"/>
                                <subviews>
                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="textfield" translatesAutoresizingMaskIntoConstraints="NO" id="y0w-xD-C7r">
                                        <rect key="frame" x="0.0" y="20" width="414" height="137"/>
                                    </imageView>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="u72-XV-6FN">
                                        <rect key="frame" x="48" y="50" width="318" height="45"/>
                                        <color key="textColor" name="BrandBlue"/>
                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="25"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                </subviews>
...
                                            <action selector="registerPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="9dE-Sc-egq"/>
                                        </connections>
                                    </button>
                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="textfield" translatesAutoresizingMaskIntoConstraints="NO" id="jY9-l3-E1g">
                                        <rect key="frame" x="0.0" y="20" width="414" height="137"/>
                                    </imageView>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hLb-P9-NkF">
                                        <rect key="frame" x="49" y="50" width="317" height="45"/>
                                        <color key="textColor" name="BrandBlue"/>
                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="25"/>
                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                    </textField>
                                </subviews>
...
                                <rect key="frame" x="0.0" y="0.0" width="414" height="714"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            </tableView>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xlo-0G-XA6">
                                <rect key="frame" x="0.0" y="714" width="414" height="60"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Write a message..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="UWj-GQ-Vph">
                                        <rect key="frame" x="20" y="20" width="314" height="40"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="40" id="POz-11-5A0"/>
                                        </constraints>
                                        <color key="textColor" name="BrandBlue"/>
                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="14"/>
...
                            <constraint firstItem="6YX-ca-E8f" firstAttribute="bottom" secondItem="xlo-0G-XA6" secondAttribute="bottom" id="KKG-6H-f0d"/>
                            <constraint firstItem="xlo-0G-XA6" firstAttribute="top" secondItem="S6L-hg-cne" secondAttribute="bottom" id="Qf3-lP-Y4a"/>
                            <constraint firstItem="xlo-0G-XA6" firstAttribute="trailing" secondItem="6YX-ca-E8f" secondAttribute="trailing" id="ce0-gb-Mph"/>
                            <constraint firstItem="S6L-hg-cne" firstAttribute="top" secondItem="6YX-ca-E8f" secondAttribute="top" id="sQt-L5-8LV"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="⚡️FlashChat" id="Q5u-eL-Bgp">
                        <barButtonItem key="rightBarButtonItem" title="Log Out" id="C12-YJ-ClA">
                            <connections>
                                <action selector="logOutPressed:" destination="lwd-AH-u8E" id="DZ8-pL-T6w"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
